--- a/index.html
+++ b/index.html
@@ -325,59 +325,29 @@
       </section>
     </main>
 
-    <!-- 
-    <section class="grid-test">
+
+    <footer class="footer">
+      <div class="footer__logo-box">
+        <img src="img/logo-green-2x.png" alt="Full logo" class='footer__logo'>
+      </div>
       <div class="row">
         <div class="col-1-of-2">
-          Col 1 of 2
+          <div class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+              <li class="footer__item"><a href="#" class="footer__link">Contact Us</a></li>
+              <li class="footer__item"><a href="#" class="footer__link">Careers</a></li>
+              <li class="footer__item"><a href="#" class="footer__link">Privacy Policy</a></li>
+              <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+            </ul>
+          </div>
         </div>
         <div class="col-1-of-2">
-          Col 1 of 2
+          <p class="footer__copyright">
+              Built by <a href="#" class="footer__link">Etni Alvis</a> for the <a href="#" class="footer__link">Advanced CSS online course</a> by Jonas Schmedtmann on Udemy. Web site design by Jonas Schmedtmann.
+          </p>
         </div>
       </div>
-
-      <div class="row">
-        <div class="col-1-of-3">
-          Col 1 of 3
-        </div>
-        <div class="col-1-of-3">
-          Col 1 of 3
-        </div>
-        <div class="col-1-of-3">
-          Col 1 of 3
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-1-of-3">
-          Col 1 of 3
-        </div>
-        <div class="col-2-of-3">
-          Col 2 of 3
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-1-of-4">
-          Col 1 of 4
-        </div>
-        <div class="col-1-of-4">
-          Col 1 of 4
-        </div>
-        <div class="col-2-of-4">
-          Col 2 of 4
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-1-of-4">
-          Col 1 of 4
-        </div>
-        <div class="col-3-of-4">
-          Col 3 of 4
-        </div>
-      </div>
-    </section>
--->
+    </footer>>
   </body>
 </html>
