--- a/index.html
+++ b/index.html
@@ -16,6 +16,23 @@
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
   <body>
+    <div class="navigation">
+      <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+      <label for="navi-toggle" class="navigation__button">
+        <span class="navigation__icon">&nbsp;</span>
+      </label>
+      <div class="navigation__background">&nbsp;</div>
+
+      <nav class="navigation__nav">
+        <ul class='navigation__list'>
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Natous</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your Benefits</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular Tours</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Book now</a></li>
+        </ul>
+      </nav>
+    </div>
     <header class="header hiddenx">
       <div class="header__logo-box">
         <img src="img/logo-white.png" alt="Logo" class="header__logo" />
@@ -114,7 +131,7 @@
         </div>
       </section>
 
-      <section class="section-tours hiddenx">
+      <section class="section-tours hiddenx" id='section-tours'>
         <div class="text-center mb-large">
           <h2 class="heading-secondary">
             Most popular tours
@@ -149,7 +166,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$297</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -182,7 +199,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$497</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -216,7 +233,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$897</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -348,6 +365,21 @@
           </p>
         </div>
       </div>
-    </footer>>
+    </footer>
+    <div class="popup" id="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img src="img/nat-8.jpg" alt="Tour Photo" class="popup__img"/>
+          <img src="img/nat-9.jpg" alt="Tour Photo" class="popup__img"/>
+        </div>
+        <div class="popup__right">
+          <a href="#section_tours" class="popup__close">&times;</a>
+          <h2 class="heading-secondary mb-small">Start Booking Now</h2>
+          <h3 class="heading-tertiary mb-small">Important &ndash; Please read these terms before booking</h3>
+          <p class='popup__text'>The earlier sites were mostly found on chalk uplands, but many of the ones discovered from the air were on lower-lying ground.[13] Over seventy are known in the British Isles,[5] and they are one of the most common types of early Neolithic site in western Europe, with about a thousand known in all.[15] They began to appear at different times in different parts of Europe: the dates range from before 4000 BC in northern France, to shortly before 3000 BC in northern Germany, Denmark and Poland.[4] The enclosures in southern Britain and Ireland began to appear not long before 3700 BC, and continued to be built for at least 200 years. In a few cases enclosures that had already been built continued to be used as late as 3300 to 3200 BC.</p>
+          <a href="#" class="btn btn--green">Book now</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
